JDK 11+ - update dependencies